RESOLVED FIXED153015
[GTK] Fix return value of some paint methods in RenderThemeGtk
https://bugs.webkit.org/show_bug.cgi?id=153015
Summary [GTK] Fix return value of some paint methods in RenderThemeGtk
Carlos Garcia Campos
Reported 2016-01-12 08:55:22 PST
It's a bit confusing, but the bool value returned by paint methods in RenderTheme means whether the appearance is supported or not, so we should return true when not supported (so we didn't paint anything) and false when supported (so we actually painted the theme part).
Attachments
Patch (6.28 KB, patch)
2016-01-12 08:57 PST, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-01-12 08:57:13 PST
Michael Catanzaro
Comment 2 2016-01-12 11:22:50 PST
Comment on attachment 268772 [details] Patch Watch the bots....
Carlos Garcia Campos
Comment 3 2016-01-12 22:47:31 PST
Note You need to log in before you can comment on or make changes to this bug.